services/envoy/envoy-api-lb/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: fastapi
                  # retry_policy:
                  #   retry_on: "5xx" # Retry on server errors
                  #   num_retries: 3  # Number of retries
                  #   per_try_timeout: 2s  # Timeout for each retry attempt
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: fastapi
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: LEAST_REQUEST
    load_assignment:
      cluster_name: fastapi
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: fastapi1
                port_value: 8000
                ipv4_compat: true
        - endpoint:
            address:
              socket_address:
                address: fastapi2
                port_value: 8000
                ipv4_compat: true
        - endpoint:
            address:
              socket_address:
                address: fastapi3
                port_value: 8000
                ipv4_compat: true
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
